--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: ewrgfdr4
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: ewrgfdr4
   template:
     metadata:
       labels:
-        app: ray
+        app: ewrgfdr4
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/ewrgfdr4:latest
+        name: ewrgfdr4
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "e409cb33-e1a1-4d7e-a8d4-46c581ed71cf"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl555fgres"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "e409cb33-e1a1-4d7e-a8d4-46c581ed71cf"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm666wseds"
         - name: Share_Path
           value: "/v2link"
